Bug 350241 - No tree view update of entity primary key constraint
Summary: No tree view update of entity primary key constraint
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16.3 (KDE Applications 15.04.3)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-15 11:25 UTC by Ralf Habacker
Modified: 2019-03-01 12:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.27.3 (KDE Applications 17.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-07-15 11:25:10 UTC
After adding a primary key constraint through the tree view and selecting the related attributes afterwards do not update the related tree view entry.

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add an entity and an attribute 'id' with type integer
3. add a primary key constraint through the tree view
4. double click on the primary key constraint and add the attribute 'id' to the primary key

Actual Results:  
The primary key entry in the tree view do not show the currently selected attributes

Expected Results:  
The primary key entry in the tree view should show the currently selected attributes
Comment 1 Ralf Habacker 2019-02-28 11:36:20 UTC
Git commit f5dcba1b3f49551f7b642b55ea220f149ed40b62 by Ralf Habacker.
Committed on 28/02/2019 at 11:26.
Pushed by habacker into branch 'Applications/18.12'.

Add typedef to class UMLForeignKeyConstraintDialog

M  +0    -2    umbrello/dialogs/umlforeignkeyconstraintdialog.cpp
M  +4    -1    umbrello/dialogs/umlforeignkeyconstraintdialog.h

https://commits.kde.org/umbrello/f5dcba1b3f49551f7b642b55ea220f149ed40b62
Comment 2 Ralf Habacker 2019-02-28 11:36:20 UTC
Git commit eaad82bae258e3ad5aa2c23f8f744c8f3d84e02f by Ralf Habacker.
Committed on 28/02/2019 at 11:35.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'No tree view update of entity primary key constraint'
FIXED-IN:2.27.3 (KDE Applications 17.12.3)

M  +3    -0    umbrello/dialogs/umlforeignkeyconstraintdialog.cpp

https://commits.kde.org/umbrello/eaad82bae258e3ad5aa2c23f8f744c8f3d84e02f
Comment 3 Ralf Habacker 2019-03-01 12:06:41 UTC
Git commit aaf0740f13b310a143d26ca904e49ddb42a85308 by Ralf Habacker.
Committed on 01/03/2019 at 12:06.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'No tree view update of entity unique and check constraint'

Setting the name with setName(), which was called before, should emit
the "modified" signal, but does not reach the tree view for unknown
reasons.

M  +2    -0    umbrello/dialogs/umlcheckconstraintdialog.cpp
M  +3    -0    umbrello/dialogs/umluniqueconstraintdialog.cpp

https://commits.kde.org/umbrello/aaf0740f13b310a143d26ca904e49ddb42a85308