Fix 'No tree view update of entity primary key constraint'

BUG:350241
FIXED-IN:2.27.3 (KDE Applications 17.12.3)